# nemo-qml-plugin-fingerprint

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  finger.cpp  finger.h  fingerprintdevice.cpp  fingerprintdevice.h  fingerprintmodel.cpp  fingerprintmodel.h  plugin.cpp  qmldir
translations/: nemofingerprint.ts  nemofingerprint_cs.ts  nemofingerprint_de.ts  nemofingerprint_pl.ts  nemofingerprint_ru.ts
